--- a/cuaderno_5.ipynb
+++ b/cuaderno_5.ipynb
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 807
         },
-        "outputId": "d1de21d4-e79e-4378-f3e0-1c4a62ce86ba"
+        "outputId": "a2912195-01e1-4535-b0e2-35cff404ec74"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -183,7 +183,7 @@
         "ax.set_axis_off()\n",
         "fig.show()"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -243,7 +243,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "ebbbb13d-3240-46c9-e34c-0309e35e06a4"
+        "outputId": "540f1bf7-ffcf-48bc-e987-554c6cbf3431"
       },
       "source": [
         "from sympy import * #importar todo sympy\n",
@@ -256,7 +256,7 @@
         "print('La potencia media de la señal es:')\n",
         "P"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
             "text/latex": "$\\displaystyle \\frac{I_{max}^{2}}{2}$"
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ]
     },
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 487
         },
-        "outputId": "0fe0e91d-8535-4e0a-d694-37541c936f76"
+        "outputId": "754fb61e-33c5-47fe-c3bf-e43423236e87"
       },
       "source": [
         "import warnings\n",
@@ -319,7 +319,7 @@
         "p1.extend(p3)\n",
         "p1.show()"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -351,6 +351,7 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "R = 1  # Resistencia\n",
         "L = 1  # Inductancia\n",
         "w = np.linspace(0, 10, 100)  # Rango de frecuencia angular\n",
@@ -366,13 +367,13 @@
       ],
       "metadata": {
         "id": "NaKYWxlw7pIL",
-        "outputId": "353c8c9b-ba26-486b-8f50-3a83b88e786a",
+        "outputId": "fc3bed0f-db76-4909-ce48-30d3c10d948c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         }
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -404,13 +405,13 @@
       ],
       "metadata": {
         "id": "T6qXiQvM-fU9",
-        "outputId": "82950530-9091-404f-edeb-c686ed4d094d",
+        "outputId": "8bd2181f-e0fd-49e5-882c-9c394c91b290",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         }
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -460,7 +461,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "38b97998-c398-4009-9b9f-4e56163f7fb7"
+        "outputId": "1fb7ecad-ddbb-462c-88e5-431fbe3f4e9b"
       },
       "source": [
         "t = symbols('t', real = True)\n",
@@ -471,7 +472,7 @@
         "print('La potencia media de la señal es:')\n",
         "Pv"
       ],
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +493,7 @@
             "text/latex": "$\\displaystyle \\frac{A^{2}}{2}$"
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -504,7 +505,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "8d3a3d0f-acb2-4faa-aefb-9179e140b665"
+        "outputId": "dbdec7b9-0a14-4afa-8615-f49f04f129e0"
       },
       "source": [
         "T = symbols('T', real = True)\n",
@@ -512,7 +513,7 @@
         "print('\\nLa energía total de la señal es:')\n",
         "Ev"
       ],
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,7 +532,7 @@
             "text/latex": "$\\displaystyle \\infty$"
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     },
@@ -549,7 +550,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "el valor RMS (cuadrático medio)"
+        "el valor RMS (cuadrático medio) de una señal es la raíz cuadrada del promedio del cuadrado de la señal.\n",
+        "Para una función continua $f(t)$ definida en el intervalo $[T1,T2]$, se expresa como:\n",
+        "\n",
+        "$$f_{\\text{RMS}} = \\sqrt{ \\frac{1}{T_2 - T_1} \\int_{T_1}^{T_2} [f(t)]^2 \\, dt}$$\n",
+        "\n",
+        "Este valor representa la magnitud efectiva de una señal variable, permitiendo compararla con una señal constante que entregaría la misma potencia a una carga resistiva.\n",
+        "\n",
+        "En ingeniería eléctrica, la potencia instantánea entregada a una resistencia $( R)$ por una señal $f(t)$ es:\n",
+        "\n",
+        "$$P(t) = \\frac{[f(t)]^2}{R}$$\n",
+        "\n",
+        "La potencia media sobre el intervalo $ [T_1, T_2] $ es:\n",
+        "\n",
+        "$$\n",
+        "P_{\\text{media}} = \\frac{1}{T_2 - T_1} \\int_{T_1}^{T_2} \\frac{[f(t)]^2}{R} \\, dt = \\frac{f_{\\text{RMS}}^2}{R}\n",
+        "$$\n",
+        "\n",
+        "De esta manera, el valor RMS se relaciona directamente con la potencia media:\n",
+        "\n",
+        "$$\n",
+        "f_{\\text{RMS}} = \\sqrt{P_{\\text{media}} \\cdot R}\n",
+        "$$\n",
+        "\n"
       ],
       "metadata": {
         "id": "dywH2WjP_TUU"
@@ -589,7 +612,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "b6cc8b02-aaca-4258-cd50-5cc33cd1dc1a"
+        "outputId": "235a1501-591c-4f4e-a7f4-f96a4f1dabec"
       },
       "source": [
         "from sympy import exp\n",
@@ -600,7 +623,7 @@
         "print('La energía total de la señal es:')\n",
         "E"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +643,7 @@
             "text/latex": "$\\displaystyle \\frac{1}{2 a}$"
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -632,7 +655,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 72
         },
-        "outputId": "3e2cbe80-b83d-4c8e-94cc-a85c77048259"
+        "outputId": "68836a61-2ef8-4af9-e0ab-a7a1fc525d23"
       },
       "source": [
         "T = symbols('T', Real = True)\n",
@@ -640,7 +663,7 @@
         "print('\\nLa potencia media de la señal es:')\n",
         "P"
       ],
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +682,7 @@
             "text/latex": "$\\displaystyle 0$"
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 18
         }
       ]
     },
@@ -707,21 +730,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "La energía de la señal se define como:\n",
+        "\n",
+        "$$\n",
+        "E = \\int_0^{\\infty} |x(t)|^2 \\, dt = \\int_0^{\\infty} t^2 e^{-2\\alpha t} \\, dt\n",
+        "$$\n",
+        "\n",
+        "Resolviendo esta integral, se obtiene:\n",
+        "\n",
+        "$$\n",
+        "E = \\frac{1}{4\\alpha^3}\n",
+        "$$\n",
+        "\n",
+        "Como este valor es finito, la señal tiene **energía finita** y **potencia nula**, por lo tanto, es una **señal de energía**."
+      ],
+      "metadata": {
+        "id": "-AHQAzUAtuLs"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "AqrtK_1SgAQh"
+        "id": "AqrtK_1SgAQh",
+        "outputId": "1a00cc9b-5a69-4872-e48e-786f9fbcbfef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "x =   #<--- Tu linea de código va aquí\n",
-        "E = integrate(x**2, (t, -oo, oo))\n",
+        "t, a, T = symbols('t a T', real=True, positive=True)\n",
+        "x = exp(-a * t) * t   #<--- Tu linea de código va aquí\n",
+        "E = integrate(x**2, (t, 0, oo))\n",
         "print('La energía total de la señal es:')\n",
-        "E\n",
-        "P = limit(integrate(x**2, (t, -T/2, T/2)) / T, T, oo)\n",
+        "print (E)\n",
+        "P = limit(integrate(x**2, (t, 0, T)) / T, T, oo)\n",
         "print('\\nLa potencia media de la señal es:')\n",
-        "P"
+        "print (P)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La energía total de la señal es:\n",
+            "1/(4*a**3)\n",
+            "\n",
+            "La potencia media de la señal es:\n",
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -753,6 +814,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import scipy.integrate as integrate\n",
+        "\n",
+        "# Definir las funciones de las señales\n",
+        "def x1(t, T0):\n",
+        "    return np.cos(2 * np.pi * t / T0)\n",
+        "\n",
+        "def x2(t, T0):\n",
+        "    if 0 <= t < T0/4:\n",
+        "        return 1\n",
+        "    elif T0/4 <= t < 3*T0/4:\n",
+        "        return -1\n",
+        "    else:\n",
+        "        return 1\n",
+        "\n",
+        "# Función para calcular el error cuadrado entre las señales\n",
+        "def error_square(t, T0):\n",
+        "    return (x1(t, T0) - x2(t, T0))**2\n",
+        "\n",
+        "# Definir el periodo T0\n",
+        "T0 = 1  # O cualquier valor que desees para el periodo\n",
+        "\n",
+        "# Realizar la integración sobre los tres intervalos\n",
+        "integral1, _ = integrate.quad(error_square, 0, T0/4, args=(T0,))\n",
+        "integral2, _ = integrate.quad(error_square, T0/4, 3*T0/4, args=(T0,))\n",
+        "integral3, _ = integrate.quad(error_square, 3*T0/4, T0, args=(T0,))\n",
+        "\n",
+        "# Sumar las integrales y dividir por T0 para obtener la potencia media\n",
+        "P_x1_x2 = (integral1 + integral2 + integral3) / T0\n",
+        "\n",
+        "print(f\"La potencia media del error es: {P_x1_x2}\")\n"
+      ],
+      "metadata": {
+        "id": "DAJjViBdwP9Y",
+        "outputId": "80c18a2d-31fe-4d89-9d2c-258a5f3c3048",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La potencia media del error es: 0.2267604552648373\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "aaIbx0zbPN8b"
@@ -762,6 +876,40 @@
         "\n",
         "Demostrar que la norma al cuadrado de una señal equivale a su energía."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La norma de una señal $x(t)$, en un espacio de funciones, se define como la raíz cuadrada de la integral de su valor absoluto al cuadrado a lo largo de todo el dominio:\n",
+        "\n",
+        "$$\n",
+        "\\| x(t) \\| = \\sqrt{\\int_{-\\infty}^{\\infty} |x(t)|^2 \\, dt}\n",
+        "$$\n",
+        "\n",
+        "El cuadrado de la norma sería simplemente:\n",
+        "\n",
+        "$$\n",
+        "\\| x(t) \\|^2 = \\int_{-\\infty}^{\\infty} |x(t)|^2 \\, dt\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "La energía de una señal $x(t)$ se define como la integral del cuadrado de la magnitud de la señal a lo largo de su dominio:\n",
+        "\n",
+        "$$\n",
+        "E_x = \\int_{-\\infty}^{\\infty} |x(t)|^2 \\, dt\n",
+        "$$\n",
+        "\n",
+        "### Relación entre la norma al cuadrado y la energía:\n",
+        "\n",
+        "Notemos que la expresión de la norma al cuadrado de la señal y la energía de la señal son matemáticamente **idénticas**. Es decir:\n",
+        "\n",
+        "$$\n",
+        "\\| x(t) \\|^2 = E_x\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "JZaHnRXQyPBR"
+      }
     },
     {
       "cell_type": "markdown",
