--- a/parcial_1_SYS.ipynb
+++ b/parcial_1_SYS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOETHj/Z6XyNRWKfVjjpOL",
+      "authorship_tag": "ABX9TyOgA/im4AWCAkpPflW668DN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,7 +119,7 @@
         "id": "egRliHl4X-Jj",
         "outputId": "f9187648-2b35-44b9-d7d5-042af6c4110a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -185,7 +185,7 @@
         "t_disc1 = np.arange(0, 2*T, Ts1) #Genera el vector de tiempo discreto t_disc1, que contiene los instantes en los que se va a muestrear la señal continua.\n",
         "x_disc1 = 3 * np.cos(1000 * np.pi * t_disc1) + 5 * np.sin(2000 * np.pi * t_disc1) +  10 * np.cos(11000 * np.pi * t_disc1) #Evalúa la señal original (𝑡) x(t) en los puntos del vector t_disc1, para obtener la señal muestreada.\n",
         "\n",
-        "# ----- Caso 2: Muestreo con fs = 12 kHz (sin aliasing) -----\n",
+        "#Caso 2: Muestreo con fs = 30 kHz (sin aliasing)\n",
         "fs2 = 30000\n",
         "Ts2 = 1 / fs2\n",
         "t_disc2 = np.arange(0, 2*T, Ts2)\n",
@@ -222,7 +222,7 @@
         "id": "KWZMNGDT-xh_",
         "outputId": "6942daf1-47ed-4375-be58-83c61c08df6c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -235,6 +235,153 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. La distancia media entre dos señales $x_1(t), x_2(t) \\in \\mathbb{R}, \\mathbb{C}$, se puede expresar a partir de la potencia media:\n",
+        "\n",
+        "$$\n",
+        "d(x_1, x_2) = \\overline{P}_{x_1 - x_2} = \\lim_{T \\to \\infty} \\frac{1}{T} \\int_0^T |x_1(t) - x_2(t)|^2 \\, dt.\n",
+        "$$\n",
+        "\n",
+        "Sean $x_1(t)$ y $x_2(t)$:\n",
+        "\n",
+        "$x_1(t) = A \\cos(\\omega_0 t), \\quad \\omega_0 = \\frac{2\\pi}{T},  T, A \\in \\mathbb{R}^+$\n",
+        "\n",
+        "$x_1(t) = A \\cos(\\omega_0 t), \\quad \\omega_0 = 2\\pi$\n",
+        "\n",
+        "$$\n",
+        "x_2(t) =\n",
+        "\\begin{cases}\n",
+        "1 & \\text{si } 0 \\leq t < \\frac{T}{4} \\\\\n",
+        "-1 & \\text{si } \\frac{T}{4} \\leq t < \\frac{3T}{4} \\\\\n",
+        "1 & \\text{si } \\frac{3T}{4} \\leq t < T\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        "¿Cuál es la distancia media entre las señales?. Corrobore sus\n",
+        " desarrollos con Sympy.\n"
+      ],
+      "metadata": {
+        "id": "7cAh8ciCok6Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cálculo de la distancia media entre dos señales periódicas\n",
+        "\n",
+        "Se calculan la distancia media entre las señales:\n",
+        "\n",
+        "- \\( x_1(t) = A \\cos\\left(\\frac{2\\pi}{T} t\\right) \\)\n",
+        "- \\( x_2(t) \\) es una señal periódica a trozos con valores 1, -1, 1 en tres tramos de duración \\( \\frac{T}{4} \\), \\( \\frac{T}{2} \\), y \\( \\frac{T}{4} \\) respectivamente.\n",
+        "\n",
+        "La distancia se calcula como:\n",
+        "\n",
+        "$$d(x_1, x_2) = \\frac{1}{T} \\int_0^T \\left(x_1(t) - x_2(t)\\right)^2 dt$$\n"
+      ],
+      "metadata": {
+        "id": "k8KV80ZSsr1e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "\n",
+        "# Definimos variables simbólicas\n",
+        "t, T, A = sp.symbols('t T A', real=True, positive=True)\n",
+        "\n",
+        "# Frecuencia angular\n",
+        "omega0 = 2 * sp.pi / T\n",
+        "\n",
+        "# Señales\n",
+        "x1 = A * sp.cos(omega0 * t)\n",
+        "\n",
+        "# Definimos x2 a trozos\n",
+        "x2 = sp.Piecewise(\n",
+        "    (1, (t >= 0) & (t < T/4)),\n",
+        "    (-1, (t >= T/4) & (t < 3*T/4)),\n",
+        "    (1, (t >= 3*T/4) & (t < T))\n",
+        ")\n",
+        "\n",
+        "# Diferencia al cuadrado\n",
+        "diff_squared = sp.simplify((x1 - x2)**2)\n",
+        "diff_squared\n",
+        "\n",
+        "# Definimos los tramos de integración\n",
+        "I1 = sp.integrate((x1 - 1)**2, (t, 0, T/4))\n",
+        "I2 = sp.integrate((x1 + 1)**2, (t, T/4, 3*T/4))\n",
+        "I3 = sp.integrate((x1 - 1)**2, (t, 3*T/4, T))\n",
+        "\n",
+        "# Distancia media\n",
+        "d = (I1 + I2 + I3) / T\n",
+        "d_simplificada = sp.simplify(d)\n",
+        "d_simplificada\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8uBMAk47rJkv",
+        "outputId": "48d99895-44e6-4e6c-f234-e8b8a06e58a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "A**2/2 - 4*A/pi + 1"
+            ],
+            "text/latex": "$\\displaystyle \\frac{A^{2}}{2} - \\frac{4 A}{\\pi} + 1$"
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Coeficientes de Fourier a partir de la segunda derivada de la señal\n",
+        "\n",
+        "Sea \\( x''(t) \\) la segunda derivada de la señal \\( x(t) \\), donde \\( t \\in [t_i, t_f] \\). Demuestre que los coeficientes de la serie exponencial de Fourier se pueden calcular según:\n",
+        "\n",
+        "$$c_n = \\frac{1}{(t_f - t_i)(n^2 \\omega_0^2)} \\int_{t_i}^{t_f} x''(t) e^{-j n \\omega_0 t} \\, dt, \\quad n \\in \\mathbb{Z}.$$\n",
+        "\n",
+        "Cálculo de \\( a_n \\) y \\( b_n \\) desde \\( x''(t) \\)\n",
+        "\n",
+        "Recordando que los coeficientes de la serie trigonométrica están relacionados con los exponenciales:\n",
+        "\n",
+        "$$a_n = c_n + c_{-n}, \\qquad b_n = j(c_n - c_{-n}),$$\n",
+        "\n",
+        "y que estos se pueden obtener a partir de \\( x''(t) \\) usando la expresión anterior para \\( c_n \\), se deduce que también pueden ser calculados desde \\( x''(t) \\).\n",
+        "\n",
+        "\\subsection*{Espectro de Fourier de la señal \\( x(t) \\) (Figura 1)}\n",
+        "\n",
+        "Encuentre el espectro de Fourier a partir de \\( x''(t) \\) para la señal dada en la Figura 1. Para \\( n \\in \\{0, \\pm1, \\pm2, \\pm3, \\pm4, \\pm5\\} \\), determine:\n",
+        "\n",
+        "\\begin{itemize}\n",
+        "    \\item Magnitud del espectro: \\( |c_n| \\)\n",
+        "    \\item Fase: \\( \\arg(c_n) \\)\n",
+        "    \\item Parte real: \\( \\Re(c_n) \\)\n",
+        "    \\item Parte imaginaria: \\( \\Im(c_n) \\)\n",
+        "    \\item Error relativo de reconstrucción de \\( x(t) \\)\n",
+        "\\end{itemize}\n",
+        "\n",
+        "\\subsection*{Simulación en Python}\n",
+        "\n",
+        "Corrobore el espectro obtenido mediante los coeficientes calculados a partir de \\( x''(t) \\) comparándolo con el estimado directamente desde \\( x(t) \\), y presente las respectivas simulaciones en Python.\n",
+        "\n",
+        "\\end{document}"
+      ],
+      "metadata": {
+        "id": "B3nnlZoSwVGL"
+      }
     }
   ]
 }
