--- a/parcial_1_SYS.ipynb
+++ b/parcial_1_SYS.ipynb
@@ -299,11 +299,7 @@
         "x1 = A * sp.cos(omega0 * t)\n",
         "\n",
         "# Definimos x2 a trozos\n",
-        "x2 = sp.Piecewise(\n",
-        "    (1, (t >= 0) & (t < T/4)),\n",
-        "    (-1, (t >= T/4) & (t < 3*T/4)),\n",
-        "    (1, (t >= 3*T/4) & (t < T))\n",
-        ")\n",
+        "x2 = sp.Piecewise((1, (t >= 0) & (t < T/4)),(-1, (t >= T/4) & (t < 3*T/4)),(1, (t >= 3*T/4) & (t < T)))\n",
         "\n",
         "# Diferencia al cuadrado\n",
         "diff_squared = sp.simplify((x1 - x2)**2)\n",
