--- a/taller_1.ipynb
+++ b/taller_1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQY5iApqmYooFVJNcbsGvh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,6 +54,23 @@
         "print(simplify(inte))\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib as plt\n",
+        "import sympy as sym\n",
+        "\n",
+        "t,w= sym.simbols ('t','w')\n",
+        "x = 3 *cos (w*t)\n",
+        "\n",
+        "plt.plot(x)"
+      ],
+      "metadata": {
+        "id": "ZzadRGpTRcQW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
