--- a/detector_musical.ipynb
+++ b/detector_musical.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4QpOr6FXQZo1PZeIu9sTc",
+      "authorship_tag": "ABX9TyNZIDEGQxQlSoCuyeBB/zgT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
         "id": "FyvtID61IHMD",
         "outputId": "97724a44-4180-4d34-f743-c19d6c677b86"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1504,10 +1504,22 @@
         "!mkdir pages"
       ],
       "metadata": {
-        "id": "mC9NZ5xb8_8D"
+        "id": "mC9NZ5xb8_8D",
+        "outputId": "8e17a610-94be-4ba7-86c1-e56b736e0378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mkdir: cannot create directory ‘pages’: File exists\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1534,15 +1546,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MZUSBrt29Cq8",
-        "outputId": "93bf9b0f-72d2-4a38-e25a-94182fb76a38"
+        "outputId": "42a4943b-7fea-4af9-896c-c071d96c7cb2"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing 0_Detector.py\n"
+            "Overwriting 0_Detector.py\n"
           ]
         }
       ]
@@ -1563,7 +1575,7 @@
         "from numpy.fft import rfft\n",
         "\n",
         "# --- CONFIGURACIONES\n",
-        "SEGUNDO_INICIO = 45\n",
+        "SEGUNDO_INICIO = 0\n",
         "DURACION = 10\n",
         "\n",
         "# --- CARGA DEL MODELO\n",
@@ -1644,15 +1656,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ArsfTfNKBMyF",
-        "outputId": "3bcfc005-d35c-47e2-b22f-5da4fff233cb"
+        "outputId": "52b31ddf-7b93-4530-9239-1913e2ef0de6"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing pages/1_🎵_Clasificador_Musical.py\n"
+            "Overwriting pages/1_🎵_Clasificador_Musical.py\n"
           ]
         }
       ]
@@ -1667,9 +1679,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DMHMuNxPBRpP",
-        "outputId": "398b5022-72e2-44f2-d6ce-4867c21c7089"
+        "outputId": "c45b1c91-0af1-48f8-c97e-45196ae5986a"
       },
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1719,35 +1731,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ji9ZlkSx9J21",
-        "outputId": "9d59e724-ce33-4857-d588-a2411ca0516c"
+        "outputId": "e4c109bb-225c-4814-a591-54429ff6d9c9"
       },
-      "execution_count": 8,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-06-15 02:32:26--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
-            "Resolving github.com (github.com)... 140.82.114.4\n",
-            "Connecting to github.com (github.com)|140.82.114.4|:443... connected.\n",
+            "--2025-06-15 02:44:03--  https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/cloudflare/cloudflared/releases/download/2025.6.0/cloudflared-linux-amd64 [following]\n",
-            "--2025-06-15 02:32:26--  https://github.com/cloudflare/cloudflared/releases/download/2025.6.0/cloudflared-linux-amd64\n",
+            "--2025-06-15 02:44:03--  https://github.com/cloudflare/cloudflared/releases/download/2025.6.0/cloudflared-linux-amd64\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/f1f89db3-aabb-45df-86d2-cc24c8707343?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250615%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250615T023226Z&X-Amz-Expires=300&X-Amz-Signature=22e0da22561c224fdac3a54f59da924a7841e010cc1e1e590e08946b189c5127&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
-            "--2025-06-15 02:32:26--  https://objects.githubusercontent.com/github-production-release-asset-2e65be/106867604/f1f89db3-aabb-45df-86d2-cc24c8707343?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=releaseassetproduction%2F20250615%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250615T023226Z&X-Amz-Expires=300&X-Amz-Signature=22e0da22561c224fdac3a54f59da924a7841e010cc1e1e590e08946b189c5127&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
-            "Resolving objects.githubusercontent.com (objects.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
-            "Connecting to objects.githubusercontent.com (objects.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "Location: https://release-assets.githubusercontent.com/github-production-release-asset/106867604/f1f89db3-aabb-45df-86d2-cc24c8707343?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-06-15T02%3A49%3A03Z&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-06-15T02%3A00%3A58Z&ske=2025-06-15T03%3A01%3A40Z&sks=b&skv=2018-11-09&sig=gJiboxNLE4kt53dLnoP1NBGGIjrvzuDpYdAAphCPDTY%3D&jwt=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc0OTk1NTc0MywibmJmIjoxNzQ5OTU1NDQzLCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.9RDq4J4RF0ykQ6zeAxrT6amjQEmjS_W5UOxNqIYtJVs&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream [following]\n",
+            "--2025-06-15 02:44:03--  https://release-assets.githubusercontent.com/github-production-release-asset/106867604/f1f89db3-aabb-45df-86d2-cc24c8707343?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-06-15T02%3A49%3A03Z&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-06-15T02%3A00%3A58Z&ske=2025-06-15T03%3A01%3A40Z&sks=b&skv=2018-11-09&sig=gJiboxNLE4kt53dLnoP1NBGGIjrvzuDpYdAAphCPDTY%3D&jwt=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc0OTk1NTc0MywibmJmIjoxNzQ5OTU1NDQzLCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.9RDq4J4RF0ykQ6zeAxrT6amjQEmjS_W5UOxNqIYtJVs&response-content-disposition=attachment%3B%20filename%3Dcloudflared-linux-amd64&response-content-type=application%2Foctet-stream\n",
+            "Resolving release-assets.githubusercontent.com (release-assets.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to release-assets.githubusercontent.com (release-assets.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 40267046 (38M) [application/octet-stream]\n",
             "Saving to: ‘cloudflared-linux-amd64’\n",
             "\n",
-            "cloudflared-linux-a 100%[===================>]  38.40M   175MB/s    in 0.2s    \n",
+            "cloudflared-linux-a 100%[===================>]  38.40M  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-06-15 02:32:26 (175 MB/s) - ‘cloudflared-linux-amd64’ saved [40267046/40267046]\n",
+            "2025-06-15 02:44:03 (278 MB/s) - ‘cloudflared-linux-amd64’ saved [40267046/40267046]\n",
             "\n",
-            "Tu aplicación está disponible en: https://hospitals-strings-preservation-capacity.trycloudflare.com\n"
+            "Tu aplicación está disponible en: https://ram-undertake-tft-survey.trycloudflare.com\n"
           ]
         }
       ]
